Character Display Functionality
-Added controllers and models for characters, species, series, and subseries
-Added routes to access information
-Wrote Javascript code to display the dynamic content after using select elements

--- a/suggestion.html
+++ b/suggestion.html
@@ -7,7 +7,7 @@
     <script type="module" src="js/main.js?version=0.1"></script>
     <title>Document</title>
 </head>
-<body>
+<body data-page="suggest">
     <header></header>
 
     <section>
