--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/grid.css?version=0.1">
     <link rel="stylesheet" href="css/main.css?version=0.1">
     <script type="module" src="js/main.js?version=0.1"></script>
-    <title>Document</title>
+    <title>Fandom PokePartners</title>
 </head>
-<body>
+<body data-page="home">
     <header></header>
 
-    <section>
+    <section class="grid-con">
         <h2 class="hidden"></h2>
+
+        <select id="main-select"></select>
+
+        <select id="sub-select">
+            <option disabled selected value="none">--Please Select A Series First--</option>
+        </select>
+    </section>
+
+    <section class="grid-con">
+        <select id="character-list">
+            <option disabled selected value="none">--Please Select A Subseries First</option>
+        </select>
+        <div id="character-list-con" class="col-span-3"></div>
+        <div id="character-partner-con" class="col-span-9"></div>
     </section>
 
     <footer></footer>
