Suggestion Page Styling
-Styled content on the suggestion page for better viewing and experience
-Added more Pokemon images
-Minor text fix

--- a/suggestion.html
+++ b/suggestion.html
@@ -64,7 +64,7 @@
             </div>
 
             <div id="problematic-rules" class="rules-text">
-                <p><b>3.</b> Fandom PokePartners does not allow suggestions based on characters or media that are deemed to be problematic. While the definition of 'problematic' can be broad, this includes, but is not limited to, any source material that is generally considered to be homophobic, transphobic, racist, anti-semetic, etc. in nature.</p>
+                <p><b>3.</b> Fandom PokePartners does not allow suggestions based on characters or media that are deemed to be problematic. While the definition of 'problematic' can be broad, this includes, but is not limited to, any source material or characters that are generally considered to be homophobic, transphobic, racist, anti-semetic, etc. in nature without positive messaging. </p>
 
                 <input type="checkbox" id="problematic" class="rule-checkbox" data-checkbox="Rule 3"><label for="problematic">I understand and agree that my suggestion is not generally considered to be problematic or comes from a problematic source material, and will be subject to denial and/or removal if it is discovered to be</label>
             </div>
