Header and Footer
-Added a new header to link between pages
-Created temporary space for logo
-Added a footer with disclaimer information
-Added images for Naruto x3, Alastor, Lucy, Yukino, Jirayia
-Minor text fixes

--- a/suggestion.html
+++ b/suggestion.html
@@ -11,7 +11,7 @@
     <title>Fandom PokePartners</title>
 </head>
 <body data-page="suggest" class="dm">
-    <header>
+    <header id="supplementary-header">
         <div id="theme-enable">
             <img id="theme-image" src="images/dark-icon.png" alt="Theme Icon">
             <p id="theme-enable-text">Enable <span id="theme-text">Dark</span> Mode</p>
@@ -24,6 +24,18 @@
         <div id="login-con">
             <a href="">Login</a>
             <a href="">Sign Up</a>
+        </div>
+    </header>
+
+    <header id="primary-header">
+        <img src="images/pokeball-full.svg" alt="">
+
+        <div id="links-con">
+            <ul id="links">
+                <li><a href="index.html">Character Database</a></li>
+                <li class="link-divider">/</li>
+                <li><a href="suggestion.html">Suggest</a></li>
+            </ul>
         </div>
     </header>
 
@@ -112,7 +124,9 @@
         </div>
     </section>
 
-    <footer></footer>
+    <footer class="full-width-grid-con">
+        <p id="footer-disclaimer" class="col-start-2 col-span-1">All images used are used for a transformative work and nonprofit. The images are copyrighted or are a registered trademark, sourced from the various Wikias/Fandoms. The contributor claims fair use. No copyright infringement is intended.<br><br>Certain materials are included under fair use exemption of the U.S. Copyright Law and are restricted from further use.<br><br>Fandom PokePartners is a fansite and are not official in any shape or form, nor affiliated, sponsored, or endorsed by any of the series, creators, parent companies, or affiliated persons found throughout the website. The content displayed in this website is meant for informational purposes only and is not official in any shape or form.</p>
+    </footer>
 
     <section id="subseries-info" class="info-box dm full-width-grid-con">
         <p class="info-text col-start-2 col-span-1">A subseries is a title that branches under the main series / franchise. This helps users from getting overwhelmed if there's series with multiple different titles with different casts, or helps create a distinction between versions of characters. Not every series has a subseries or needs to be divided. If you're unsure, please re-enter the series name. <br><br>Examples of subseries:<br>-Yu-Gi-Oh! GX<br>-Persona 5<br>-Marvel Cinematic Universe</p>
