--- a/suggestion.html
+++ b/suggestion.html
@@ -8,7 +8,7 @@
     <script type="module" src="js/main.js?version=0.1"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollToPlugin.min.js"></script>
-    <title>Fandom PokePartners</title>
+    <title>Fandom PokePartners- Suggest A Character</title>
 </head>
 <body data-page="suggest" class="dm">
     <header id="supplementary-header">
