--- a/index.html
+++ b/index.html
@@ -103,5 +103,9 @@
             <p class="close-button">X</p>
         </div>
     </section>
+
+    <section id="vote-box">
+        <p>Sorry, you must be logged in to vote</p>
+    </section>
 </body>
 </html>
