--- a/index.html
+++ b/index.html
@@ -107,5 +107,9 @@
     <section id="vote-box">
         <p>Sorry, you must be logged in to vote</p>
     </section>
+
+    <section id="upvote-prevent-box">
+        <p>Sorry, you have already voted for that Pokemon for that character</p>
+    </section>
 </body>
 </html>
