--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
             <ul id="links">
                 <li><a href="index.html">Character Database</a></li>
                 <li class="link-divider">/</li>
-                <li><a href="suggestion.html">Suggest</a></li>
+                <li><a href="suggestion.php">Suggest</a></li>
             </ul>
         </div>
     </header>
