--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <title>Fandom PokePartners- Register</title>
 </head>
 <body data-page="register" class="dm">
-    <header>
+    <header class="dm">
         <div id="supplementary-header">
             <div id="theme-enable">
                 <img id="theme-image" src="images/dark-icon.png" alt="Theme Icon">
@@ -45,20 +45,27 @@
         </div>
     </header>
 
-    <section id="register-form-con" class="grid-con">
+    <section id="register-form-con" class="grid-con dm">
         <div id="register-form-div" class="col-span-full">
             <h3>Register</h3>
             <form id="register-form" method="post">
                 <label for="email">Email:</label>
-                <input id="register-email" type="text" name="email" required>
+                <input id="register-email" type="text" name="email" class="dm" required>
 
                 <label for="username">Username:</label>
-                <input id="register-username" type="text" name="username" required>
+                <input id="register-username" type="text" name="username" class="dm" required>
 
                 <label for="password">Password:</label>
-                <input id="register-password" type="password" name="password" required>
+                <input id="register-password" type="password" name="password" class="dm" required>
 
-                <input id="register-button" type="submit" value="Register">
+                <label for="birthday">Birthday:</label>
+                <input id="register-birthday" type="date" name="birthday" class="dm" required>
+
+                <div id="privacy-check-con">
+                    <input type="checkbox" id="privacy-policy-check" class="privacy-checkbox dm"><label for="privacy-policy-checkbox">I have read and agree with the <a id="register-privacy-link" href="privacy.php">privacy policy</a></label>
+                </div>
+
+                <input id="register-button" type="submit" value="Register" class="dm">
             </form>
 
             <p id="register-error"></p>
@@ -67,12 +74,12 @@
 
     <section class="grid-con">
         <div class="col-start-2 col-end-4 m-col-start-6 m-col-end-8">
-            <p id="top-text" class="dm">To Top ↑</p>
+            <p id="top-text" class="dm" class="dm">To Top ↑</p>
         </div>
     </section>
 
-    <footer class="full-width-grid-con">
-        <p id="footer-disclaimer" class="col-start-2 col-span-1">All images used are used for a transformative work and nonprofit. The images are copyrighted or are a registered trademark, sourced from the various Wikias/Fandoms. The contributor claims fair use. No copyright infringement is intended.<br><br>Certain materials are included under fair use exemption of the U.S. Copyright Law and are restricted from further use.<br><br>Fandom PokePartners is a fansite and are not official in any shape or form, nor affiliated, sponsored, or endorsed by any of the series, creators, parent companies, or affiliated persons found throughout the website. The content displayed in this website is meant for informational purposes only and is not official in any shape or form.<br><br><a href="privacy.php">Privacy Policy</a> | <a href="contact.php">Contact Us</a></p>
+    <footer class="full-width-grid-con dm">
+        <p id="footer-disclaimer" class="col-start-2 col-span-1">All images used are used for a transformative work and nonprofit. The images are copyrighted or are a registered trademark, sourced from the various Wikias/Fandoms. The contributor claims fair use. No copyright infringement is intended.<br><br>Certain materials are included under fair use exemption of the U.S. Copyright Law and are restricted from further use.<br><br>Fandom PokePartners is a fansite and are not official in any shape or form, nor affiliated, sponsored, or endorsed by any of the series, creators, parent companies, or affiliated persons found throughout the website. The content displayed in this website is meant for informational purposes only and is not official in any shape or form.<br><br><a href="privacy.php">Privacy Policy</a> | <a href="contact.php">Contact</a></p>
     </footer>
 
     <section id="hamburger-menu-con" class="full-width-grid-con mobile-menu dm">
