--- a/login.html
+++ b/login.html
@@ -82,6 +82,11 @@
     <section id="hamburger-menu-con" class="full-width-grid-con mobile-menu dm">
         <h1 class="hidden">Mobile-Menu</h1>
         <div class="col-start-2 col-span-1 mobile-links">
+            <div class="mobile-close">
+                <div>
+                    <p class="close-button">X</p>
+                </div>
+            </div>
             <a href="index.php">Character Database</a>
             <div class="hamburger-divider"></div>
             <a href="suggestion.php">Suggest</a>
@@ -91,10 +96,6 @@
             <a href="register.html">Register</a>
             <div class="hamburger-divider"></div>
             <a href="contact.php">Contact</a>
-        </div>
-
-        <div class="col-span-1 mobile-close">
-            <p class="close-button">X</p>
         </div>
     </section>
 </body>
