--- a/login.html
+++ b/login.html
@@ -66,6 +66,11 @@
 
             <p id="login-error"></p>
         </div>
+
+        <div id="forgot-link-div" class="col-span-full">
+            <a class="forgot-link" href="forgot-username.html">Forgot Username?</a>
+            <a class="forgot-link" href="forgot-password.html">Forgot Password?</a>
+        </div>
     </section>
 
     <section class="grid-con">
